--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,12 @@ services:
     image: mysql:5.7
     volumes:
       - db-volume:/var/lib/mysql
+    ports:
+      - '4306:3306'
     environment:
       MYSQL_ROOT_PASSWORD: password
+      MYSQL_USER: root
+      MYSQL_DATABASE: root
+      MYSQL_PASSWORD: password
 volumes:
   db-volume:
