--- a/test/fixtures/comments.yml
+++ b/test/fixtures/comments.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  board: 
+  board: one
   name: MyString
   comment: MyText
 
 two:
-  board: 
+  board: two
   name: MyString
   comment: MyText
